k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: backend-pods
      namespace: chat-app
      labels:
        app: backend

    spec:
      containers:
        - image: saswati99/chatapp-backend:latest
          name : chatapp-backend
          ports:
           - containerPort : 5001
