k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: chat-app
spec:
  replicas: 1
  selector:                           # This tells Kubernetes which pods this Deployment should manage. It matches pods with the label app: mongo
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontend-pods
      namespace: chat-app
      labels:
        app: frontend

    spec:
      containers:
        - image: saswati99/chatapp-frontend:latest
          name : chatapp-frontend
          ports:
           - containerPort : 80
