k8s/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      name: mongo-pods
      namespace: chat-app
      labels:
        app: mongo

    spec:
      containers:
        - image: mongo:latest
          name : chatapp-mongo
          ports:
           - containerPort : 27017
      volumes:
        - name: mongodb-data
          persistentVolumeClaim: 
            claimName : mongodb-pvc
